[package]
name = "wayland-http"
version = "0.1.0"
authors = ["Fangyuanziti <tiziyuanfang@gmail.com>"]

[dependencies]
wayland-server = "0.8.*"
smithay = { git = "https://github.com/vberger/smithay.git" }

[dependencies.wayland-protocols]
version = "0.8.*"
features = ["server", "nightly", "unstable_protocols"]
