[package]
authors = ["Fangyuanziti <tiziyuanfang@gmail.com>"]
name = "wayland-http"
version = "0.1.0"

[dependencies]
time = "0.1.39"
wayland-server = "0.12.5"
actix = "0.4.5"
actix-web = "0.3.3"
smithay = { git = "https://github.com/fangyuanziti/smithay.git", rev = "50e59b6" }
libc = "0.2.36"
wayland-sys = "0.12.5"
serde = "1.0.27"
serde_derive = "1.0.27"
http = "0.1.4"
failure = "0.1.1"
futures = "0.1.18"
sugar = { git = "https://github.com/fangyuanziti/sugar-rs.git" }
futures-timer = "0.1.1"
serde_json = "1.0.9"
slog = "2.1.1"
slog-async = "2.2.0"
slog-term = "2.3.0"
slog-scope = "4.0.1"

[dependencies.wayland-protocols]
features = ["server", "unstable_protocols"]
version = "0.12.5"
